--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "comment-anchors",
 	"displayName": "Comment Anchors",
 	"description": "Place anchor tags within comments for easy file navigation",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"publisher": "ExodiusStudios",
 	"engines": {
 		"vscode": "^1.24.0"
@@ -142,7 +142,7 @@
 						},
 						{
 							"tag": "REVIEW",
-							"iconColor": "orange",
+							"iconColor": "green",
 							"highlightColor": "#64DD17",
 							"scope": "workspace"
 						}
