--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
 				},
 				"commentAnchors.workspace.excludeFiles": {
 					"type": "string",
-					"default": "**/{node_modules,.git,.idea}/**/*",
+					"default": "**/{node_modules,.git,.idea,target,out,build}/**/*",
 					"description": "The glob pattern of the files that will be excluded from matching by Comment Anchors",
 					"scope": "window"
 				},
@@ -254,7 +254,6 @@
 	},
 	"dependencies": {
 		"debounce": "^1.1.0",
-		"escape-string-regexp": "^1.0.5",
-		"glob": "^7.1.3"
+		"escape-string-regexp": "^1.0.5"
 	}
 }
