--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
 			},
 			{
 				"command": "commentAnchors.toggle",
-				"title": "Toggle the visibility of tag highlights",
+				"title": "Toggle the visibility of comment anchors",
+				"category": "Comment Anchors"
+			},
+			{
+				"command": "commentAnchors.listTags",
+				"title": "List configured anchor tags",
 				"category": "Comment Anchors"
 			},
 			{
@@ -177,6 +182,13 @@
 							"iconColor": "green",
 							"highlightColor": "#64DD17",
 							"scope": "workspace"
+						},
+						{
+							"tag": "SECTION",
+							"iconColor": "blurple",
+							"highlightColor": "#896afc",
+							"scope": "workspace",
+							"isRegion": true
 						}
 					],
 					"items": {
@@ -196,9 +208,14 @@
 									"default",
 									"red",
 									"purple",
+									"teal",
 									"green",
 									"orange",
-									"blue"
+									"pink",
+									"blue",
+									"blurple",
+									"emerald",
+									"yellow"
 								],
 								"default": "default",
 								"description": "The icon for this tag in the sidebar"
