Now we can group and sort anchors

--- a/package.json
+++ b/package.json
@@ -64,6 +64,10 @@
 				{
 					"id": "workspaceAnchors",
 					"name": "Workspace Anchors"
+				},
+				{
+					"id": "epicAnchors",
+					"name": "Epic Anchors"
 				}
 			]
 		},
