--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "comment-anchors",
 	"displayName": "Comment Anchors",
 	"description": "Place anchor tags within comments for easy file & workspace navigation.",
-	"version": "1.7.1",
+	"version": "1.7.2",
 	"publisher": "ExodiusStudios",
 	"engines": {
 		"vscode": "^1.38.0"
@@ -64,6 +64,10 @@
 				{
 					"id": "workspaceAnchors",
 					"name": "Workspace Anchors"
+				},
+				{
+					"id": "epicAnchors",
+					"name": "Epic Anchors"
 				}
 			]
 		},
@@ -148,6 +152,18 @@
 						"abbreviated",
 						"hidden"
 					]
+				},
+				"commentAnchors.epic.provideAutoCompletion": {
+					"type": "boolean",
+					"default": true,
+					"description": "Whether auto complete an epic",
+					"scope": "window"
+				},
+				"commentAnchors.epic.seqStep": {
+					"type": "integer",
+					"default": 1,
+					"description": "Only useful when autoComplete is enabled. This will be added to the max seq for each epic as shown in the autocomplete item",
+					"scope": "window"
 				},
 				"commentAnchors.tags.provideAutoCompletion": {
 					"type": "boolean",
