--- a/package.json
+++ b/package.json
@@ -357,12 +357,21 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install"
+		"postinstall": "node ./node_modules/vscode/bin/install",
+		"lint": "eslint . --ext .ts",
+		"lint:fix": "eslint  --fix . --ext .ts"
 	},
 	"devDependencies": {
 		"@types/debounce": "^1.0.0",
 		"@types/mocha": "^2.2.42",
 		"@types/node": "^7.0.43",
+		"@typescript-eslint/eslint-plugin": "^3.9.1",
+		"@typescript-eslint/parser": "^3.9.1",
+		"eslint": "^7.7.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"husky": "^4.2.5",
+		"prettier": "^2.0.5",
 		"typescript": "^2.6.1",
 		"vscode": "^1.1.37"
 	},
@@ -370,5 +379,10 @@
 		"debounce": "^1.2.0",
 		"escape-string-regexp": "^2.0.0",
 		"opn": "^6.0.0"
-	}
+	},
+	"husky": {
+		"hooks": {
+		  "pre-commit": "npm run lint"
+		}
+	  }
 }
