feat: clean up epics
removed default epic, instead untagged anchors will not display in the epic list

--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
 				},
 				{
 					"id": "epicAnchors",
-					"name": "Epic Anchors"
+					"name": "Epic Anchors",
+					"visibility": "collapsed"
 				}
 			]
 		},
