--- a/package.json
+++ b/package.json
@@ -230,6 +230,12 @@
 					"description": "When true, displays hierarchical anchors in the workspace list",
 					"scope": "window"
 				},
+				"commentAnchors.tags.expandSections": {
+					"type": "boolean",
+					"default": true,
+					"description": "When true, sections are automatically expanded in the tree",
+					"scope": "window"
+				},
 				"commentAnchors.tags.separators": {
 					"type": "array",
 					"default": [
