feat: add hidden scope support (#128)

--- a/package.json
+++ b/package.json
@@ -371,10 +371,11 @@
 							"scope": {
 								"type": "string",
 								"enum": [
+									"hidden",
 									"file",
 									"workspace"
 								],
-								"description": "Defines the scope of this tag. Setting this to \"file\" makes these tags only visible in the 'File Anchors' list",
+								"description": "Defines the scope of this tag. Setting this to \"file\" makes these tags only visible in the 'File Anchors' list, while \"hidden\" completely hides it from the anchor list",
 								"default": "workspace"
 							},
 							"behavior": {
