--- a/package.json
+++ b/package.json
@@ -427,26 +427,25 @@
 	],
 	"main": "./out/extension",
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
+		"vscode:prepublish": "yarn run compile",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"lint": "eslint . --ext .ts",
-		"lint:fix": "eslint  --fix . --ext .ts"
+		"lint": "eslint src --ext .ts",
+		"lint:fix": "eslint src --fix --ext .ts"
 	},
 	"devDependencies": {
 		"@types/debounce": "^1.0.0",
-		"@types/mocha": "^2.2.42",
-		"@types/node": "^7.0.43",
-		"@typescript-eslint/eslint-plugin": "^3.9.1",
-		"@typescript-eslint/parser": "^3.9.1",
-		"eslint": "^7.7.0",
+		"@types/mocha": "^10.0.0",
+		"@types/node": "16.x",
+		"@types/vscode": "^1.72.0",
+		"@typescript-eslint/eslint-plugin": "^5.38.1",
+    	"@typescript-eslint/parser": "^5.38.1",
+		"eslint": "^8.24.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-prettier": "^3.1.4",
 		"husky": "^4.2.5",
 		"prettier": "^2.0.5",
-		"typescript": "^4.0.3",
-		"vscode": "^1.1.37"
+		"typescript": "^4.8.4"
 	},
 	"dependencies": {
 		"debounce": "^1.2.0",
