--- a/package.json
+++ b/package.json
@@ -440,11 +440,9 @@
 		"@types/vscode": "^1.72.0",
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
     	"@typescript-eslint/parser": "^5.38.1",
+		"eslint-plugin-unused-imports": "^2.0.0",
 		"eslint": "^8.24.0",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-prettier": "^3.1.4",
 		"husky": "^4.2.5",
-		"prettier": "^2.0.5",
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
